Major functionality updates

--- a/src/Scoreboard.scss
+++ b/src/Scoreboard.scss
@@ -1,9 +1,10 @@
-.score {
+.scoreboard {
   background-color: $blue;
   border: $border;
-  font-size: 48px;
+  font-size: 40px;
   font-weight: bold;
   color: #ffffff;
   text-shadow: 4px 4px 2px #000000;
   padding: 25px;
+  text-align: center;
 }
