--- a/src/Clues.scss
+++ b/src/Clues.scss
@@ -2,14 +2,9 @@
   background: $blue;
   color: #ffffff;
   text-align: center;
-  display: flex;
-  flex-direction: row;
-  text-shadow: 2px 2px 3px #000000;
-  text-transform: uppercase;
   font-weight: bold;
-  margin: 0 auto;
-  width: 1050px;
-
+  width: 175px;
+  flex: 0 0 175px;
 }
 
   .clues__category {
@@ -18,7 +13,7 @@
 
     .clues__category-title,
     .clues__question {
-      width: 175px;
+      width: 100%;
       height: 100px;
       border: 2px solid #ffffff;
       @include vertical-align;
@@ -26,6 +21,8 @@
 
     .clues__category-title {
       padding: 10px;
+      text-shadow: 2px 2px 3px #000000;
+      text-transform: uppercase;
     }
     
     .clues__questions {
