--- a/src/Scoreboard.scss
+++ b/src/Scoreboard.scss
@@ -1,6 +1,6 @@
 .scoreboard {
   background-color: $blue;
-  border: $border;
+  border-top: $border;
   font-size: 40px;
   font-weight: bold;
   color: #ffffff;
