--- a/src/Clues.scss
+++ b/src/Clues.scss
@@ -3,8 +3,11 @@
   color: #ffffff;
   text-align: center;
   font-weight: bold;
-  width: 175px;
-  flex: 0 0 175px;
+  flex: 0 0 135px;
+
+  @include breakpoint {
+    flex: 0 0 175px;
+  }
 }
 
   .clues__category {
@@ -15,10 +18,15 @@
     .clues__question {
       width: 100%;
       height: 100px;
-      border: 2px solid #ffffff;
+      border-right: $border;
+      border-bottom: $border;
       @include vertical-align;
     }
 
+    .clues__question:last-of-type {
+      border-bottom: 0;
+    }
+    
     .clues__category-title {
       padding: 10px;
       text-shadow: 2px 2px 3px #000000;
