--- a/src/Question.scss
+++ b/src/Question.scss
@@ -26,12 +26,14 @@
       display: block;
       padding: 10px;
       width: 225px;
+      max-width: 100%;
       text-align: center;
       font-size: 16px;
       border: 0;
       box-shadow: 0 2 5px #000000;
       border-radius: 3px;
       margin: 0 auto 4px;
+      color: #000000;
     }
     
     .question__keep-playing,
