Update clues to use category as component name

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,6 +37,6 @@ body {
 @import-normalize;
 @import "./App.scss";
 @import "./Gameboard.scss";
-@import "./Clues.scss";
+@import "./Category.scss";
 @import "./Question.scss";
 @import "./Scoreboard.scss";
