--- a/src/Question.scss
+++ b/src/Question.scss
@@ -1,7 +1,7 @@
 .question {
   @include vertical-align;
   flex-direction: column;
-  flex: 1 1 auto;
+  flex: 1 1 100%;
   padding: 15px;
   text-transform: uppercase;
   color: #ffffff;
