Clue value adjustments

--- a/src/Category.scss
+++ b/src/Category.scss
@@ -16,13 +16,13 @@
       height: 100px;
       border-right: $border;
       border-bottom: $border;
-      @include vertical-align;
     }
-
+    
     .category__title {
       padding: 10px;
       text-shadow: 2px 2px 3px #000000;
       text-transform: uppercase;
+      @include vertical-align;
     }
     
     .category__clues {
@@ -44,6 +44,7 @@
           height: 100%;
           width: 100%;
           border: 0;
+          padding: 0;
           text-shadow: 4px 4px 2px #000000;
           cursor: pointer;
           
