--- a/src/Scoreboard.scss
+++ b/src/Scoreboard.scss
@@ -1,10 +1,9 @@
 .scoreboard {
-  background-color: $blue;
   border-top: $border;
   font-size: 40px;
   font-weight: bold;
   color: #ffffff;
-  text-shadow: 4px 4px 2px #000000;
+  text-shadow: $shadow;
   padding: 25px;
   text-align: center;
 }
