--- a/src/Category.scss
+++ b/src/Category.scss
@@ -1,63 +1,66 @@
 .category {
-  background: $blue;
   color: #ffffff;
   text-align: center;
   font-weight: bold;
-  width: 135px;
+  flex: 0 0 135px;
+  border-right: $border;
 
   @include breakpoint {
-    width: 175px;
+    flex: 0 0 175px;
   }
 }
 
-    .category__title,
-    .category__clue {
-      width: 100%;
-      height: 100px;
-      border-right: $border;
-      border-bottom: $border;
-    }
-    
-    .category__title {
-      padding: 10px;
-      text-shadow: 2px 2px 3px #000000;
-      text-transform: uppercase;
-      @include vertical-align;
-    }
-    
-    .category__clues {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-    }
+.category__title,
+.category__clue {
+  width: 100%;
+  height: 80px;
+  border-bottom: $border;
 
-      .category__clue:last-of-type {
-        border-bottom: 0;
-      }
-    
-        .category__clue-value {
-          background: $blue;
-          display: block;
-          color: $yellow;
-          font-size: 38px;
-          font-weight: bold;
-          height: 100%;
-          width: 100%;
-          border: 0;
-          padding: 0;
-          text-shadow: 4px 4px 2px #000000;
-          cursor: pointer;
-          
-          @include breakpoint {
-            font-size: 48px;
-          }
+  @include breakpoint {
+    height: 100px;
+  }
+}
 
-          &:hover,
-          &:focus {
-            background: $blue-dark;
-          }
+.category__title {
+  padding: 10px;
+  text-shadow: $shadow;
+  text-transform: uppercase;
+  @include vertical-align;
+}
 
-          &.is--answered {
-            visibility: hidden;
-          }
-        }
+.category__clues {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.category__clue:last-of-type {
+  border-bottom: 0;
+}
+
+.category__clue-value {
+  background: $blue;
+  display: block;
+  color: $yellow;
+  font-size: 38px;
+  font-weight: bold;
+  height: 100%;
+  width: 100%;
+  border: 0;
+  padding: 0;
+  text-shadow: 4px 4px 2px #000000;
+  cursor: pointer;
+
+  @include breakpoint {
+    font-size: 48px;
+  }
+
+  &:hover,
+  &:focus {
+    background: $blue-dark;
+  }
+
+  &.is--answered {
+    visibility: hidden;
+  }
+}
